fix for background on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,8 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  height: 100%;
+  overflow: hidden;
 }
 
 .welcomeMsg {
